--- a/_precio.scss
+++ b/_precio.scss
@@ -7,7 +7,7 @@
 #bgPrecio {
     width: 100%;
     height: 700px;
-    background-image: url(/img/precio2.png);
+    background-image: url(img/precio2.png);
     background-size:  cover;
     background-position: center right;
     margin-left: 0px;
